Skip to content

4.0 regression: Assertion raised with #display stream output

Run with

./vlc -I dummy --sout="#display" ~/samples

results into an assertion:

vlc: ../../src/audio_output/dec.c:62: aout_DecNew: Assertion `clock' failed.
test.sh: line 3: 31979 Aborted                 (core dumped) ./vlc -I dummy --sout="#display" ~/Samples/umc_hd_espn.ts

Either the display should create a clock or use the one from the stream output pipeline. Maybe both of them is reasonable depending on the use case of the stream output pipeline ?

Edited by Rémi Denis-Courmont
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information